[gd_scene load_steps=4 format=3 uid="uid://bivunb2uxe4ld"]

[ext_resource type="Script" path="res://addons/rewind_story_engine/character_editor/outfit_editor.gd" id="1_1o1ej"]
[ext_resource type="Texture2D" uid="uid://bj2j8vaphgtr2" path="res://addons/rewind_story_engine/icons/Node.svg" id="1_60rhf"]
[ext_resource type="Texture2D" uid="uid://bu7fno4vntimi" path="res://addons/rewind_story_engine/icons/Remove.svg" id="1_q7fgb"]

[node name="OutfitEditor" type="HBoxContainer" node_paths=PackedStringArray("id", "line_edit", "open_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1o1ej")
id = NodePath("ID")
line_edit = NodePath("LineEdit")
open_button = NodePath("Open")

[node name="ID" type="Label" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "id"
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Название костюма"

[node name="Open" type="Button" parent="."]
layout_mode = 2
text = "Выбрать"
icon = ExtResource("1_60rhf")

[node name="Button" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_q7fgb")

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_remove_button_pressed"]
